# MRParameterMaps

./: BrukerT1Map.cxx  BrukerT2Map.cxx  CMakeLists.txt  ImageCompare.cxx  PhilipsT1Map.cxx  PhilipsT2Map.cxx  README.md  T1_LL_10_1.PAR  T1_LL_10_1.REC  T1rhoMap.cxx  T1rhoMap.xml  T2_Map_4_3.PAR  T2_Map_4_3.REC  brukert1test.mhd  brukert1test.raw  brukert2consttest.mhd  brukert2exptest.mhd  brukert2exptest.raw  brukert2rsqrtest.mhd  brukert2rsqrtest.raw  brukert2test.mhd  brukert2test.raw  itkBruker2DSEQImageIO.cxx  itkBruker2DSEQImageIO.h  itkBruker2DSEQImageIOFactory.h  itkFDFCommonImageIO.cxx  itkFDFCommonImageIO.h  itkFDFImageIO.cxx  itkFDFImageIO.h  itkFDFImageIOFactory.cxx  itkFDFImageIOFactory.h  itkMRT1ParameterMap3DImageFilter.h  itkMRT1ParameterMap3DImageFilter.txx  itkMRT2ParameterMap3DImageFilter.h  itkMRT2ParameterMap3DImageFilter.txx  itkPhilipsPAR.cxx  itkPhilipsRECImageIO.cxx  itkPhilipsRECImageIO.h  itkPhilipsRECImageIOFactory.h  philipst1test.mhd  (+3 more)
DCB021304.oj1/: subject
DCB021304.oj1/1/: acqp  fid  grdprog.r  imnd  pulseprogram
DCB021304.oj1/1/pdata/1/: 2dseq  d3proc  procs  reco  roi
DCB021304.oj1/2/: acqp  imnd  pulseprogram
DCB021304.oj1/2/pdata/1/: reco
DCB021304.oj1/3/: acqp  grdprog.r  imnd
DCB021304.oj1/3/pdata/1/: 2dseq  d3proc  procs  reco  roi
DCB021304.oj1/4/: acqp  imnd  pulseprogram
DCB021304.oj1/4/pdata/1/: reco
DCB021304.oj1/5/: acqp  fid  grdprog.r  imnd
DCB021304.oj1/5/pdata/1/: 2dseq  d3proc  procs  reco  roi
